{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 14,
  "lineage": "aa3fcee4-7ff2-88a3-2a2d-519907c4a162",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/f566b6fa-d6f0-4dae-92ce-ea63de120259/resourceGroups/terraform-rg/providers/Microsoft.Network/networkInterfaces/testnic",
            "internal_domain_name_suffix": "no44ytwelopu3jdi15qszz0jdf.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/f566b6fa-d6f0-4dae-92ce-ea63de120259/resourceGroups/terraform-rg/providers/Microsoft.Network/virtualNetworks/testvnet/subnets/subnet1"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "name": "testnic",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "terraform-rg"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg1",
            "azurerm_subnet.subn1",
            "azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f566b6fa-d6f0-4dae-92ce-ea63de120259/resourceGroups/terraform-rg/providers/Microsoft.Network/networkSecurityGroups/testnsg",
            "location": "eastus",
            "name": "testnsg",
            "resource_group_name": "terraform-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow_ssh",
                "priority": 1000,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/f566b6fa-d6f0-4dae-92ce-ea63de120259/resourceGroups/terraform-rg/providers/Microsoft.Network/networkSecurityGroups/testnsg/securityRules/Allow_ssh",
            "name": "Allow_ssh",
            "network_security_group_name": "testnsg",
            "priority": 1000,
            "protocol": "Tcp",
            "resource_group_name": "terraform-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg1",
            "azurerm_resource_group.rg1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/f566b6fa-d6f0-4dae-92ce-ea63de120259/resourceGroups/terraform-rg/providers/Microsoft.Network/publicIPAddresses/testpip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "74.235.221.118",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "testpip",
            "resource_group_name": "terraform-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subn1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/f566b6fa-d6f0-4dae-92ce-ea63de120259/resourceGroups/terraform-rg/providers/Microsoft.Network/virtualNetworks/testvnet/subnets/subnet1",
            "name": "subnet1",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "terraform-rg",
            "virtual_network_name": "testvnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg1",
            "azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f566b6fa-d6f0-4dae-92ce-ea63de120259/resourceGroups/terraform-rg/providers/Microsoft.Network/virtualNetworks/testvnet/subnets/subnet1",
            "network_security_group_id": "/subscriptions/f566b6fa-d6f0-4dae-92ce-ea63de120259/resourceGroups/terraform-rg/providers/Microsoft.Network/networkSecurityGroups/testnsg",
            "subnet_id": "/subscriptions/f566b6fa-d6f0-4dae-92ce-ea63de120259/resourceGroups/terraform-rg/providers/Microsoft.Network/virtualNetworks/testvnet/subnets/subnet1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg1",
            "azurerm_resource_group.rg1",
            "azurerm_subnet.subn1",
            "azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "4eecbd6b-5bc4-4e9f-a468-dfe12ce7491d",
            "id": "/subscriptions/f566b6fa-d6f0-4dae-92ce-ea63de120259/resourceGroups/terraform-rg/providers/Microsoft.Network/virtualNetworks/testvnet",
            "location": "eastus",
            "name": "testvnet",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "terraform-rg",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.2.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/f566b6fa-d6f0-4dae-92ce-ea63de120259/resourceGroups/terraform-rg/providers/Microsoft.Network/virtualNetworks/testvnet/subnets/subnet1",
                "name": "subnet1",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/f566b6fa-d6f0-4dae-92ce-ea63de120259/resourceGroups/terraform-rg/providers/Microsoft.Network/networkSecurityGroups/testnsg"
              }
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg1"
          ]
        }
      ]
    }
  ]
}